# rust-template

./: .env.example  Cargo.toml  README.md
src/: config.rs  main.rs
