[package]
name        = "rust-template"
version     = "0.1.0"
edition     = "2021"
authors     = ["George Miao <gm@miao.dev>"]
license     = "MIT"
description = "A template for app services"
repository  = "https://github.com/George-Miao/rust-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing                 = "0.1.34"
mod_use                 = "0.2.0"
once_cell               = "1.12.0"
tracing-subscriber      = "0.3.11"
tokio-graceful-shutdown = "0.9.0"

color-eyre = { version = "0.6.1", default-features = false }
figment    = { version = "0.10.6", features = ["env"] }
serde      = { version = "1.0.137", features = ["derive"] }
tokio      = { version = "1.18.2", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }
dotenv = "0.15.0"

[dev-dependencies]
figment = { version = "0.10.6", features = ["test"] }
